Updated client.php - Added sounds and fixed styling on mobile

--- a/htdocs/res/css/css.css
+++ b/htdocs/res/css/css.css
@@ -133,10 +133,14 @@ ul.testgrid li {
 }
 
 .controls{
-    padding-bottom: 20px;  
+    padding-bottom: 10px;  
 }
 
 .controls button{
-    height: 200px;
+    height: 100px;
     font-size: 40px;
+}
+
+label {
+    color: #fff;
 }
